--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,14 @@
 *.tar.gz
 *.rar
 
+# Ide generated files
+.classpath
+.project
+/target/
+.settings/
+.metadata/
+.idea/
+*.iml
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
