--- a/pom.xml
+++ b/pom.xml
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <groupId>automation</groupId>
-  <artifactId>potterapi</artifactId>
-  <version>1.0-SNAPSHOT</version>
+    <groupId>automation</groupId>
+    <artifactId>potterapi</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
-  <name>automation-potterapi</name>
-  <url>https://www.potterapi.com/</url>
+    <name>automation-potterapi</name>
+    <url>https://www.potterapi.com/</url>
 
-  <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <aspectj.version>1.9.4</aspectj.version>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <jackson.version>2.10.1</jackson.version>
-  </properties>
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <aspectj.version>1.9.4</aspectj.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <jackson.version>2.10.1</jackson.version>
+    </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>automation.common</groupId>
-      <artifactId>framework</artifactId>
-      <version>1.0.1</version>
-    </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>automation.common</groupId>
+            <artifactId>framework</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
