Updated Steps classes, features, and properties file. Created:    - Two new features    - New steps classes    - New response models    - New API class

--- a/src/test/resources/automation.properties
+++ b/src/test/resources/automation.properties
@@ -1,3 +1,4 @@
-potter.api.base.url = https://www.potterapi.com/v1
-sorting.hat.url = /sortingHat
-characters.url = /characters
+potter.api.base.url=https://www.potterapi.com/v1
+sorting.hat.url=/sortingHat
+characters.url=/characters
+houses.url=/houses
